Add support for Tomcat reverse proxy through Apache.

--- a/build.properties
+++ b/build.properties
@@ -43,3 +43,17 @@ rpm.repo.urlpath=/rpmrepo
 # for example, the output of this command:  head -c 8 /dev/urandom |  openssl sha1 -r | cut -c -16
 # The corresponding username is hardwired to "rpmrepo".
 rpm.repo.password=
+
+###
+### Apache and Tomcat
+###
+
+# The canonical hostname for web service. Requests using other hostnames will be redirected to this.
+web.hostname=www.example.com
+
+# Mappings to map Tomcat web applications into the Apache web space via reverse proxy.
+# These are comma-separated URL path pairs of the form /apath:/tpath, which will map the
+# Apache URL path /apath to the Tomcat URL path /tpath. If /apath starts with /private,
+# then the web application will be protected.
+tomcat.port80.mappings=/api:/mywebapp/restapi
+tomcat.port443.mappings=/private/system/admin:/mywebapp/gui,/private/reports:/mywebapp/gui/reports
