--- a/tomcat/build.xml
+++ b/tomcat/build.xml
@@ -8,4 +8,9 @@
 
     <!-- Use default build instructions -->
     <import file="../default-build.xml"/>
+
+    <!-- Get URL mappings -->
+    <property name="build.extra.rpm.flags" value="
+      --define 'tomcat_port80_mappings ${tomcat.port80.mappings}'
+      --define 'tomcat_port443_mappings ${tomcat.port443.mappings}'"/>
 </project>
