--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -43,7 +43,7 @@ HostnameLookups     Off
 
     # Basic setup
     DocumentRoot "@publicroot@"
-    ServerName @mydomain@
+    ServerName @web_hostname@
     ServerAdmin @serveremail@
 
     # Logging
@@ -57,8 +57,8 @@ HostnameLookups     Off
     </Directory>
 
     # Force use of canonical hostname
-    <If "%{HTTP_HOST} != '@mydomain@'">
-        Redirect "/" "http://@mydomain@/"
+    <If "%{HTTP_HOST} != '@web_hostname@'">
+        Redirect "/" "http://@web_hostname@/"
     </If>
 
     # Disable userdir on publicly accessible server
@@ -67,7 +67,7 @@ HostnameLookups     Off
     </IfModule>
 
     # Redirect attempts to access private intranet to SSL
-    RedirectMatch "^/private(/.*|)$" "https://@mydomain@/$1"
+    RedirectMatch "^/private(/.*|)$" "https://@web_hostname@/$1"
 
     # Extra safety
     <Directory "@privateroot@">
@@ -87,7 +87,7 @@ HostnameLookups     Off
 
     # Basic setup
     DocumentRoot "@publicroot@"
-    ServerName @mydomain@
+    ServerName @web_hostname@
     ServerAdmin @serveremail@
 
     # Logging
