--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -49,6 +49,11 @@ HostnameLookups     Off
     # Logging
     CustomLog "@publiclog@" vhost_combined
 
+    # Disable userdir on publicly accessible server
+    <IfModule mod_userdir.c>
+        UserDir disabled
+    </IfModule>
+
     # Access control
     <Directory "@publicroot@">
         Options FollowSymLinks Indexes IncludesNoExec
@@ -58,23 +63,18 @@ HostnameLookups     Off
 
     # Force use of canonical hostname
     <If "%{HTTP_HOST} != '@web_hostname@'">
-        Redirect "/" "http://@web_hostname@/"
+        RedirectMatch "^/(.*)$" "http://@web_hostname@/$1"
     </If>
-
-    # Disable userdir on publicly accessible server
-    <IfModule mod_userdir.c>
-        UserDir disabled
-    </IfModule>
 
     # Redirect attempts to access private intranet to SSL
     RedirectMatch "^/private(/.*|)$" "https://@web_hostname@/$1"
 
     # Extra safety
     <Directory "@privateroot@">
-        Redirect 401
+        RedirectMatch ".*" 401
     </Directory>
     <Location "/private">
-        Redirect 401
+        RedirectMatch ".*" 401
     </Location>
 
     # Per-server customizations
@@ -142,7 +142,7 @@ HostnameLookups     Off
 
         # Logging
         CustomLog "@privatelog@" vhost_combined
-    </Directory>
+    </Location>
 
     # Per-server customizations
     IncludeOptional "@servincdir@/*.port443.include"
