Fix bug where private subdirectory needs to be under DocumentRoot.

--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -66,11 +66,11 @@ HostnameLookups     Off
         RedirectMatch "^/(.*)$" "http://@web_hostname@/$1"
     </If>
 
-    # Redirect attempts to access private intranet to SSL
-    RedirectMatch "^/private(/.*|)$" "https://@web_hostname@/$1"
+    # Redirect attempts to access private intranet to encrypted server
+    RedirectMatch "^/private(/.*|)$" "https://@web_hostname@/private$1"
 
     # Extra safety
-    <Directory "@privateroot@">
+    <Directory "@publicroot@/private">
         RedirectMatch ".*" 401
     </Directory>
     <Location "/private">
@@ -125,7 +125,7 @@ HostnameLookups     Off
 
     # Require two-factor authentication for /private area
     # Proctect both the URL and the directory to be safe.
-    <Directory "@privateroot@">
+    <Directory "@publicroot@/private">
         AuthType                basic
         AuthBasicProvider       webauth-otp
         AuthName                "@org_name@ Intranet"
