Set ServerName globally to eliminate Apache startup warning.

--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -10,6 +10,9 @@ MaxConnectionsPerChild  1000
 # Don't attempt DNS lookups
 HostnameLookups     Off
 
+# Set server name here to eliminate startup warning
+ServerName @web_hostname@
+
 # Disable UserDir for root
 <IfModule mod_userdir.c>
     UserDir disabled root
