--- a/rpm-repo/src/repo/org/org.repo.in
+++ b/rpm-repo/src/repo/org/org.repo.in
@@ -1,5 +1,5 @@
 [@ORG_ID@]
-name=@ORG_NAME@ RPM repository
+name=@ORG_NAME@ RPM repository (openSUSE @susever@)
 type=rpm-md
 baseurl=https://@URL_AUTH_PREFIX@@REPO_HOST@@REPO_URLPATH@/opensuse@susever@/
 gpgcheck=0
