Add support for openSUSE Leap and Tumbleweed to rpm-repo.

--- a/build.properties
+++ b/build.properties
@@ -24,6 +24,7 @@ time.zone=US/Central
 build.os.name=opensuse
 
 # The O/S versions we build RPMs for. These should be like "VERSION_ID" in /etc/os/release.
+# For openSUSE Leap, use e.g. "42.1". Also "tumbleweed" is supported for openSUSE Tumbleweed.
 build.os.versions=13.1,13.2
 
 ###
