Use certbot for SSL certificate.

--- a/build.properties
+++ b/build.properties
@@ -15,6 +15,9 @@ org.domain=example.com
 # Default time zone for servers
 time.zone=US/Central
 
+# Primary technical contact email address
+org.contact=postmaster@example.com
+
 ###
 ### Build information
 ###
