Revert 8e3aa760 and ef05d0a6, which disagree with <dellroad:rpmdist> ant macro.

--- a/rpm-repo/src/repo/leap/repo-non-oss.repo.in
+++ b/rpm-repo/src/repo/leap/repo-non-oss.repo.in
@@ -1,7 +1,7 @@
 [repo-non-oss]
-name=openSUSE Leap Non-OSS (@susever@)
+name=openSUSE Leap Non-OSS (@osrel@)
 type=yast2
-baseurl=http://download.opensuse.org/distribution/leap/@susever@/repo/non-oss/
+baseurl=http://download.opensuse.org/distribution/leap/@osrel@/repo/non-oss/
 gpgcheck=1
 enabled=1
 autorefresh=0
