--- a/rpm-repo/src/repo/leap/repo-oss.repo.in
+++ b/rpm-repo/src/repo/leap/repo-oss.repo.in
@@ -1,7 +1,7 @@
 [repo-oss]
-name=openSUSE Leap OSS (@susever@)
+name=openSUSE Leap OSS (@osrel@)
 type=yast2
-baseurl=http://download.opensuse.org/distribution/leap/@susever@/repo/oss/
+baseurl=http://download.opensuse.org/distribution/leap/@osrel@/repo/oss/
 gpgcheck=1
 enabled=1
 autorefresh=0
