--- a/rpm-repo/src/repo/leap/repo-update-non-oss.repo.in
+++ b/rpm-repo/src/repo/leap/repo-update-non-oss.repo.in
@@ -1,7 +1,7 @@
 [repo-update-non-oss]
-name=openSUSE Leap Update Non-OSS (@susever@)
+name=openSUSE Leap Update Non-OSS (@osrel@)
 type=rpm-md
-baseurl=http://download.opensuse.org/update/leap/@susever@/non-oss/
+baseurl=http://download.opensuse.org/update/leap/@osrel@/non-oss/
 gpgcheck=1
 enabled=1
 autorefresh=0
