--- a/rpm-repo/src/repo/opensuse/repo-non-oss.repo.in
+++ b/rpm-repo/src/repo/opensuse/repo-non-oss.repo.in
@@ -1,7 +1,7 @@
 [repo-non-oss]
-name=openSUSE Non-OSS (@susever@)
+name=openSUSE Non-OSS (@osrel@)
 type=yast2
-baseurl=http://download.opensuse.org/distribution/@susever@/repo/non-oss/
+baseurl=http://download.opensuse.org/distribution/@osrel@/repo/non-oss/
 gpgcheck=1
 enabled=1
 autorefresh=0
