--- a/rpm-repo/src/repo/opensuse/repo-oss.repo.in
+++ b/rpm-repo/src/repo/opensuse/repo-oss.repo.in
@@ -1,7 +1,7 @@
 [repo-oss]
-name=openSUSE OSS (@susever@)
+name=openSUSE OSS (@osrel@)
 type=yast2
-baseurl=http://download.opensuse.org/distribution/@susever@/repo/oss/
+baseurl=http://download.opensuse.org/distribution/@osrel@/repo/oss/
 gpgcheck=1
 enabled=1
 autorefresh=0
