--- a/rpm-repo/src/repo/opensuse/repo-update.repo.in
+++ b/rpm-repo/src/repo/opensuse/repo-update.repo.in
@@ -1,7 +1,7 @@
 [repo-update]
-name=openSUSE Update (@susever@)
+name=openSUSE Update (@osrel@)
 type=rpm-md
-baseurl=http://download.opensuse.org/update/@susever@/
+baseurl=http://download.opensuse.org/update/@osrel@/
 gpgcheck=1
 enabled=1
 autorefresh=0
