Fix <dellroad:rpmdist> checking of ${rpm.repo.host}.

--- a/build.properties
+++ b/build.properties
@@ -37,7 +37,7 @@ build.os.versions=42.3
 # RPM repository directory on host machine
 rpm.repo.dir=/opt/repo/rpm
 
-# RPM repository hostname
+# RPM repository hostname (fully qualified and matching the content of /etc/hostname on that machine)
 rpm.repo.host=download.example.com
 
 # URL path to RPM repository on host (must start, but not end, with a "/")
