Update for openSUSE Leap as the standard distribution.

--- a/build.properties
+++ b/build.properties
@@ -23,8 +23,8 @@ org.contact=postmaster@example.com
 ###
 
 # The name of the O/S we are building for. This should match "ID" in /etc/os-release.
-# For some modules, only "opensuse" is supported.
-build.os.name=opensuse
+# For some modules, only "leap" is supported.
+build.os.name=leap
 
 # The O/S versions we build RPMs for. These should be like "VERSION_ID" in /etc/os/release.
 # For openSUSE Leap, use e.g. "42.1". Also "tumbleweed" is supported for openSUSE Tumbleweed.
