--- a/rpm-repo/src/repo/tumbleweed/repo-non-oss.repo.in
+++ b/rpm-repo/src/repo/tumbleweed/repo-non-oss.repo.in
@@ -1,7 +1,7 @@
 [repo-non-oss]
 name=openSUSE Tumbleweed Non-OSS
-type=yast2
-baseurl=http://download.opensuse.org/tumbleweed/repo/non-oss/
+type=rpm-md
+baseurl=@repobaseurl@/tumbleweed/repo/non-oss/
 gpgcheck=1
 enabled=1
 autorefresh=0
