Add support for proxy service.

--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -23,6 +23,7 @@ ServerName @web_hostname@
 # 
 # webauth-otp           Two-factor authentication using PINs + one-time passwords
 # webauth-otp-pin       Provides the PIN authentication component for webauth-otp
+# webauth-proxy         Proxy authentication
 #
 
 # webauth-otp-pin: PIN authentication (authenticates user PINs only) - do NOT use directly
@@ -39,6 +40,11 @@ ServerName @web_hostname@
     OTPAuthLogoutOnIPChange Off
     OTPAuthPINAuthProvider  webauth-otp-pin
     OTPAuthMaxOTPFailure    10
+</AuthnProviderAlias>
+
+# Authentication provider used for proxy access
+<AuthnProviderAlias file webauth-proxy>
+    AuthUserFile            "@proxpwfile@"
 </AuthnProviderAlias>
 
 # HTTP virtual host
@@ -79,6 +85,16 @@ ServerName @web_hostname@
     <Location "/private">
         RedirectMatch ".*" 401
     </Location>
+
+    # Provide a proxy service, password required
+    ProxyRequests On
+    ProxyVia Off
+    <Proxy "*">
+        AuthType                basic
+        AuthName                "@org_name@ Proxy"
+        AuthBasicProvider       webauth-proxy
+        Require                 valid-user
+    </Proxy>
 
     # Per-server customizations
     IncludeOptional "@servincdir@/*.port80.include"
