--- a/build.properties
+++ b/build.properties
@@ -26,9 +26,10 @@ org.contact=postmaster@example.com
 # For some modules, only "leap" is supported.
 build.os.name=leap
 
-# The O/S versions we build RPMs for. These should be like "VERSION_ID" in /etc/os/release.
+# The O/S version(s) we build RPMs for. These should be like "VERSION_ID" in /etc/os/release.
 # For openSUSE Leap, use e.g. "15.3". Also "tumbleweed" is supported for openSUSE Tumbleweed.
-build.os.versions=15.3
+# Separate multiple versions with commas.
+build.os.versions=15.4
 
 ###
 ### RPM Repository
