Allow unauthenticated access to icons and errors.

--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -70,6 +70,16 @@ ServerName @web_hostname@
         Require all granted
     </Directory>
 
+    # Allow access to icons and errors
+    <Location "/icons/">
+        AuthType None
+        Require all granted
+    </Location>
+    <Location "/error/">
+        AuthType None
+        Require all granted
+    </Location>
+
     # Force use of canonical hostname
     <If "%{HTTP_HOST} != '@web_hostname@'">
         RedirectMatch "^/(.*)$" "http://@web_hostname@/$1"
@@ -154,6 +164,16 @@ ServerName @web_hostname@
         AuthBasicProvider       webauth-otp
         AuthName                "@org_name@ Intranet"
         Require                 valid-user
+    </Location>
+
+    # Allow access to icons and errors
+    <Location "/icons/">
+        AuthType None
+        Require all granted
+    </Location>
+    <Location "/error/">
+        AuthType None
+        Require all granted
     </Location>
 
     # Per-server customizations
