Disable "Options Indexes" by default.

--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -65,8 +65,8 @@ ServerName @web_hostname@
 
     # Access control
     <Directory "@publicroot@">
-        Options FollowSymLinks Indexes IncludesNoExec
-        AllowOverride FileInfo Indexes Limit Options=FollowSymLinks,IncludesNOEXEC,Indexes,SymLinksIfOwnerMatch
+        Options FollowSymLinks IncludesNoExec
+        AllowOverride FileInfo Limit Options=FollowSymLinks,IncludesNOEXEC,SymLinksIfOwnerMatch
         Require all granted
     </Directory>
 
@@ -129,8 +129,8 @@ ServerName @web_hostname@
 
     # Access control
     <Directory "@publicroot@">
-        Options FollowSymLinks Indexes IncludesNoExec
-        AllowOverride FileInfo Indexes Limit Options=FollowSymLinks,IncludesNOEXEC,Indexes,SymLinksIfOwnerMatch
+        Options FollowSymLinks IncludesNoExec
+        AllowOverride FileInfo Limit Options=FollowSymLinks,IncludesNOEXEC,SymLinksIfOwnerMatch
         Require all granted
     </Directory>
 
