Block stupid Microsoft stuff.

--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -179,6 +179,14 @@ ServerName @web_hostname@
         Require all granted
     </Location>
 
+    # Block stupid Microsoft stuff - http://goo.gl/HBktjG
+    RewriteEngine on
+    RewriteCond %{REQUEST_METHOD} ^(OPTIONS|PROPFIND)$ [NC]
+    RewriteCond %{HTTP_USER_AGENT} ^Microsoft\ Office\ Protocol\ Discovery [OR]
+    RewriteCond %{HTTP_USER_AGENT} ^Microsoft\ Office\ Existence\ Discovery [OR]
+    RewriteCond %{HTTP_USER_AGENT} ^Microsoft\-WebDAV\-MiniRedir.*$
+    RewriteRule .* - [R=501,L]
+
     # Per-server customizations
     IncludeOptional "@servincdir@/*.port443.include"
 
