Add git-repos RPM.

--- a/build.properties
+++ b/build.properties
@@ -50,6 +50,13 @@ rpm.repo.urlpath=/rpmrepo
 rpm.repo.password=
 
 ###
+### Git repositories
+###
+
+# Git repository parent directory on host machine
+git.repo.dir=/opt/repo/git
+
+###
 ### Apache and Tomcat
 ###
 
