Fix some issues with configuration of HTTP port 80.
- Don't disable port 80 in listen.conf.
- Redirect everything to port 443.
- Eliminate the proxy server.

--- a/web/src/apache/web.conf
+++ b/web/src/apache/web.conf
@@ -26,7 +26,6 @@ ServerName @web_hostname@
 # 
 # webauth-otp           Two-factor authentication using PINs + one-time passwords
 # webauth-otp-pin       Provides the PIN authentication component for webauth-otp
-# webauth-proxy         Proxy authentication
 #
 
 # webauth-otp-pin: PIN authentication (authenticates user PINs only) - do NOT use directly
@@ -45,11 +44,6 @@ ServerName @web_hostname@
     OTPAuthMaxOTPFailure    10
 </AuthnProviderAlias>
 
-# Authentication provider used for proxy access
-<AuthnProviderAlias file webauth-proxy>
-    AuthUserFile            "@proxpwfile@"
-</AuthnProviderAlias>
-
 # HTTP virtual host
 <VirtualHost *:80>
 
@@ -61,35 +55,8 @@ ServerName @web_hostname@
     # Logging
     CustomLog "@publiclog@" vhost_combined
 
-    # Disable userdir on publicly accessible server
-    <IfModule mod_userdir.c>
-        UserDir disabled
-    </IfModule>
-
-    # Access control
-    <Directory "@publicroot@">
-        Options FollowSymLinks IncludesNoExec
-        AllowOverride FileInfo Limit Options=FollowSymLinks,IncludesNOEXEC,SymLinksIfOwnerMatch
-        Require all granted
-    </Directory>
-
-    # Allow access to icons and errors
-    <Location "/icons/">
-        AuthType None
-        Require all granted
-    </Location>
-    <Location "/error/">
-        AuthType None
-        Require all granted
-    </Location>
-
-    # Force use of canonical hostname
-    <If "%{HTTP_HOST} != '@web_hostname@'">
-        RedirectMatch "^/(.*)$" "http://@web_hostname@/$1"
-    </If>
-
-    # Redirect attempts to access private intranet to encrypted server
-    RedirectMatch "^/private(/.*|)$" "https://@web_hostname@/private$1"
+    # Redirect everything to HTTPS
+    Redirect permanent / https://@web_hostname@/
 
     # Extra safety
     <Directory "@publicroot@/private">
@@ -98,16 +65,6 @@ ServerName @web_hostname@
     <Location "/private">
         RedirectMatch ".*" 401
     </Location>
-
-    # Provide a proxy service, password required
-    ProxyRequests On
-    ProxyVia Off
-    <Proxy "*">
-        AuthType                basic
-        AuthName                "@org_name@ Proxy"
-        AuthBasicProvider       webauth-proxy
-        Require                 valid-user
-    </Proxy>
 
     # Per-server customizations
     IncludeOptional "@servincdir@/*.port80.include"
