Remove non-functional Tumbleweed option.

--- a/build.properties
+++ b/build.properties
@@ -27,8 +27,7 @@ org.contact=postmaster@example.com
 build.os.name=leap
 
 # The O/S version(s) we build RPMs for. These should be like "VERSION_ID" in /etc/os/release.
-# For openSUSE Leap, use e.g. "15.3". Also "tumbleweed" is supported for openSUSE Tumbleweed.
-# Separate multiple versions with commas.
+# For openSUSE Leap, use e.g. "15.6". Separate multiple versions with commas.
 build.os.versions=15.6
 
 ###
