--- a/build.properties
+++ b/build.properties
@@ -43,10 +43,10 @@ rpm.repo.host=download.example.com
 # URL path to RPM repository on host (must start, but not end, with a "/")
 rpm.repo.urlpath=/rpmrepo
 
-# RPM repository password (optional). Set this to something random to password protect RPM repository,
-# for example, the output of this command:  head -c 8 /dev/urandom |  openssl sha1 -r | cut -c -16
+# RPM repository password. Set this to something random to password protect RPM repository, for example,
+# the output of this command:  head -c 8 /dev/urandom |  openssl sha1 -r | cut -c -16
 # The corresponding username is hardwired to "rpmrepo".
-rpm.repo.password=
+rpm.repo.password=abc123
 
 ###
 ### Git repositories
